# silly-rusted-pokedex

./: netlify.toml
crates/pokemon-api/: Cargo.toml
crates/pokemon-api/src/: main.rs
crates/upload-pokemon-data/: .env  Cargo.toml  create-tables.sql  input.sql
crates/upload-pokemon-data/src/: db.rs  main.rs  pokemon_csv.rs
