[package]
name = "upload-pokemon-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
color-eyre = "0.6.2"
csv = "1.3.0"
futures = "0.3.29"
indicatif = "0.17.7"
ksuid = "0.2.0"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.35.1", features = ["full"] }
